--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,9 @@
     <header>
 
     </header>
-
+    <section>
+        <a href="webprojects/baitshop/">Bait Shop Redesign</a>
+        <a href="webprojects/funyon/">The Onion Spoof</a>
+    </section>
 </body>
 </html>
