--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <title>Shay Hart</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <nav>
