--- a/index.html
+++ b/index.html
@@ -16,8 +16,25 @@
         <a href="projects.html">Projects</a>
     </nav>
     <header>
-
+        <h1>About Me</h1>
     </header>
+
+    <main>
+        <section>
+            <img src="images/headshot.png" alt="Photo of Shay Hart" class="profile-pic">
+            <h2>Howdy!</h2>
+            <p>
+                I am a passionate student with interests in data and programming. I enjoy building projects that combine technical skills with creativity, and I'm always eager to learn new things.
+            </p>
+            <p>
+                I find that most people view the world of information technology through a structured and clinical lens. However, I find it to be more intrinsically linked to the humanities than one might imagine on first impression. Code is language and art combined into one.
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Shay Hart. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
