--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <a href="">Index</a>
+        <a href="/">Index</a>
         <a href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
     </nav>
