--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <a href="shayrunaway.github.io">Index</a>
-        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
     </nav>
     <header>
@@ -21,7 +21,7 @@
 
     <main>
         <section>
-            <img src="images/headshot.png" alt="Photo of Shay Hart" class="profile-pic">
+            <img src="images/headshot.png" alt="Photo of Shay Hart" class="headshot">
             <h2>Howdy!</h2>
             <p>
                 I am a passionate student with interests in data and programming. I enjoy building projects that combine technical skills with creativity, and I'm always eager to learn new things.
