--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <a href="shayrunaway.github.io">Index</a>
-        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
     </nav>
     <header>
