--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <!-- Shay Hart; December 9th, 2025; Final Resume Project -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shay Hart</title>
+    <title>Contact - Shay Hart</title>
     <link rel="icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
     <link rel="stylesheet" href="/css/styles.css">
@@ -15,9 +15,40 @@
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
     </nav>
-    <header>
 
+    <header>
+        <h1>Contact Me</h1>
     </header>
 
+    <main>
+        <section>
+            <h2>Get in Touch</h2>
+            <p>If you'd like to connect, feel free to reach out using the form below or through my social links.</p>
+
+            <form action="mailto:sh0870771@otc.edu" method="post" enctype="text/plain" class="contact-form">
+                <label for="name">Name:</label><br>
+                <input type="text" id="name" name="name" required><br><br>
+
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email" required><br><br>
+
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message" rows="6" required></textarea><br><br>
+
+                <button type="submit">Send</button>
+            </form>
+        </section>
+
+        <section>
+            <h2>Other Ways to Connect</h2>
+                <a href="mailto:sh0870771@otc.edu">Email</a>
+                <a href="https://github.com/shayrunaway" target="_blank">Github</a>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 1996 Shay Hart</p>
+    </footer>
 </body>
 </html>
