--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <img src="images/headshot.png" alt="Photo of Shay Hart" class="headshot">
-            <h2>Howdy!</h2>
+            <h2>Howdy! I'm Shay Hart</h2>
             <p>
                 I am a passionate student with interests in data and programming. I enjoy building projects that combine technical skills with creativity, and I'm always eager to learn new things.
             </p>
@@ -33,7 +33,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Shay Hart. All rights reserved.</p>
+        <p>&copy; 1996 Shay Hart</p>
     </footer>
 
 </body>
