--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,7 @@
 
     <main>
         <section>
-            <h2>Get in Touch</h2>
-            <p>If you'd like to connect, feel free to reach out using the form below or through my social links.</p>
+            <h2>Get In Touch</h2>
 
             <form action="mailto:sh0870771@otc.edu" method="post" enctype="text/plain" class="contact-form">
                 <label for="name">Name:</label><br>
@@ -40,7 +39,7 @@
         </section>
 
         <section>
-            <h2>Other Ways to Connect</h2>
+            <h2>Other Methods</h2>
                 <a href="mailto:sh0870771@otc.edu">Email</a>
                 <a href="https://github.com/shayrunaway" target="_blank">Github</a>
             </ul>
