--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 
         <section>
             <h2>Other Methods</h2>
-                <a href="mailto:sh0870771@otc.edu">Email</a>
+                <a href="mailto:sh0870771@otc.edu">Email</a><br>
                 <a href="https://github.com/shayrunaway" target="_blank">Github</a>
             </ul>
         </section>
