--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Shay Hart; December 9th, 2025; Final Resume Project -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shay Hart</title>
@@ -15,12 +14,25 @@
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
     </nav>
-    <header>
 
+    <header>
+        <h1>Projects</h1>
     </header>
-    <section>
-        <a href="webprojects/baitshop/">Bait Shop Redesign</a>
-        <a href="webprojects/funyon/">The Onion Spoof</a>
-    </section>
+
+    <main>
+        <section>
+            <p>
+                Welcome to my portfolio! Below are some of my class web projects.
+            </p>
+            <ul>
+                <li><a href="webprojects/baitshop/">Bait Shop Redesign</a></li>
+                <li><a href="webprojects/funyon/">The Onion Spoof</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Shay Hart</p>
+    </footer>
 </body>
 </html>
