--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Shay Hart; December 9th, 2025; Final Resume Project -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shay Hart</title>
@@ -24,10 +25,10 @@
             <p>
                 Welcome to my portfolio! Below are some of my class web projects.
             </p>
-            <ul>
-                <li><a href="webprojects/baitshop/">Bait Shop Redesign</a></li>
-                <li><a href="webprojects/funyon/">The Onion Spoof</a></li>
-            </ul>
+            <p>
+                <a href="webprojects/baitshop/">Bait Shop Redesign</a><br>
+                <a href="webprojects/funyon/">The Onion Spoof</a>
+            </p>
         </section>
     </main>
 
