--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <nav>
-        <a href="shayrunaway.github.io">Index</a>
+        <a href="shayrunaway.github.io">About</a>
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
     </nav>
 
     <header>
-        <h1>Contact Me</h1>
+        <h1>Contact</h1>
     </header>
 
     <main>
