--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav>
-        <a href="shayrunaway.github.io">Index</a>
+        <a href="shayrunaway.github.io">About</a>
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
     </nav>
