--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <nav>
-        <a href="shayrunaway.github.io">Index</a>
+        <a href="shayrunaway.github.io">About</a>
         <a href="contact.html">Contact</a>
         <a href="projects.html">Projects</a>
     </nav>
     <header>
-        <h1>About Me</h1>
+        <h1>About</h1>
     </header>
 
     <main>
