--- a/projects.html
+++ b/projects.html
@@ -25,10 +25,10 @@
             <p>
                 Welcome to my portfolio! Below are some of my class web projects.
             </p>
-            <p>
-                <a href="webprojects/baitshop/">Bait Shop Redesign</a><br>
-                <a href="webprojects/funyon/">The Onion Spoof</a>
-            </p>
+        </section>
+        <section class="projects-grid">
+            <a href="webprojects/baitshop/">Bait Shop Redesign</a><br>
+            <a href="webprojects/funyon/">The Onion Spoof</a>
         </section>
     </main>
 
