--- a/projects.html
+++ b/projects.html
@@ -21,14 +21,16 @@
     </header>
 
     <main>
-        <section>
-            <p>
-                Welcome to my portfolio! Below are some of my class web projects.
-            </p>
-        </section>
         <section class="projects-grid">
-            <a href="webprojects/baitshop/">Bait Shop Redesign</a><br>
+            <a href="webprojects/about">About Me Intro</a>
+            <a href="webprojects/howto/">Sudoku How To</a>
+            <a href="webprojects/company/">Fictional Company</a>\
+            <a href="webprojects/bedandbreakfast/">Bed and Breakfast</a>
+            <a href="webprojects/sockclub/">Sock Club</a>
             <a href="webprojects/funyon/">The Onion Spoof</a>
+            <a href="webprojects/musicartist/">Music Artist</a>
+            <a href="webprojects/baitshop/">Bait Shop Redesign</a>
+            <a href="webprojects/fitnessclub/">Fitness Club</a>
         </section>
     </main>
 
