--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         <section class="projects-grid">
             <a href="webprojects/about">About Me Intro</a>
             <a href="webprojects/howto/">Sudoku How To</a>
-            <a href="webprojects/company/">Fictional Company</a>\
+            <a href="webprojects/company/">Fictional Company</a>
             <a href="webprojects/bedandbreakfast/">Bed and Breakfast</a>
             <a href="webprojects/sockclub/">Sock Club</a>
             <a href="webprojects/funyon/">The Onion Spoof</a>
