--- a/webprojects/company/shop.html
+++ b/webprojects/company/shop.html
@@ -20,7 +20,7 @@
             <h1 id="shop-name">Flourish & Blotts</h1>
             <p id="tagline">Diagon Alley booksellers since 1454</p>
             <nav id="navigation">
-                <a href="home.html" title="Lumos">Home</a>
+                <a href="index.html" title="Lumos">Home</a>
                 <a href="shop.html" title="Lumos">Shop</a>
             </nav>
         </header>
