--- a/webprojects/bedandbreakfast/index.html
+++ b/webprojects/bedandbreakfast/index.html
@@ -39,9 +39,9 @@
         </section>
 
         <div id="gallery">
-            <div class="photo"><img src="photos/outside.jpg" width="400" alt="Pub exterior featuring witch and cauldron sign"></div>
-            <div class="photo"><img src="photos/diningroom.jpg" width="400" alt="Dining room with long table and fireplace"></div><br>
-            <div class="photo"><img src="photos/witch.jpg" width="400" alt="Bedroom with full bed and bookshelves"></div>
+            <div class="photo"><img src="bedandbreakfast/photos/outside.jpg" width="400" alt="Pub exterior featuring witch and cauldron sign"></div>
+            <div class="photo"><img src="bedandbreakfast/photos/diningroom.jpg" width="400" alt="Dining room with long table and fireplace"></div><br>
+            <div class="photo"><img src="bedandbreakfast/photos/witch.jpg" width="400" alt="Bedroom with full bed and bookshelves"></div>
             <div class="photo"><img src="photos/wizard.jpg" width="400" alt="Bedroom with twin bunk beds and small bathroom"></div><br>
             <div class="photo"><img src="photos/warlock.jpg" width="400" alt="Bedroom with queen four poster bed"></div>
             <div class="photo"><img src="photos/troll.png" width="400" alt="Bedroom with a twin bed taking up the majority of the space"></div>
