--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <nav>
-        <a href="shayrunaway.github.io">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="projects.html">Projects</a>
+        <a href="shayrunaway.github.io" alt="Home page with about information">About</a>
+        <a href="contact.html" alt="Contact page with form, email, and Github">Contact</a>
+        <a href="projects.html" alt="Projects page with links to web projects">Projects</a>
     </nav>
 
     <header>
@@ -31,7 +31,7 @@
                 <label for="email">Email:</label><br>
                 <input type="email" id="email" name="email" required><br><br>
 
-                <label for="message">Message:</label><br>
+                <label for="message">Inquiry:</label><br>
                 <textarea id="message" name="message" rows="6" required></textarea><br><br>
 
                 <button type="submit">Send</button>
