--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <nav>
-        <a href="shayrunaway.github.io">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="projects.html">Projects</a>
+        <a href="shayrunaway.github.io" alt="Home page with about information">About</a>
+        <a href="contact.html" alt="Contact page with form, email, and Github">Contact</a>
+        <a href="projects.html" alt="Projects page with links to web projects">Projects</a>
     </nav>
     <header>
-        <h1>About</h1>
+        <h1>Shay Hart</h1>
         <p>Future Data Scientist<p>
     </header>
 
