--- a/projects.html
+++ b/projects.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <nav>
-        <a href="shayrunaway.github.io" alt="Home page with about information">About</a>
-        <a href="contact.html" alt="Contact page with form, email, and Github">Contact</a>
-        <a href="projects.html" alt="Projects page with links to web projects">Projects</a>
+        <a href="shayrunaway.github.io">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="projects.html">Projects</a>
     </nav>
 
     <header>
@@ -21,6 +21,7 @@
     </header>
 
     <main>
+        <h2>Projects</h2>
         <section class="projects-grid">
             <a href="webprojects/about">About Me Intro</a>
             <a href="webprojects/howto/">Sudoku How To</a>
