--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 I started my journey with the internet and programming young. At age nine I developed a passion for endlessly editing garish Myspace layouts, eventually growing into a small teenage side business of creating <a href="https://homeiswheremyblogis.tumblr.com">Tumblr themes</a>. 
             </p>
             <p>
-                I find that most people view the world of information technology through a structured and clinical lens. However, I find it to be more intrinsically linked to the humanities than one might imagine on first impression. Code is language and art combined into one.
+                I find that most people view the world of information technology through a structured and clinical lens. However, I feel it is more intrinsically linked to the humanities than one might imagine on first impression. Code is language and art combined into one.
             </p>
         </section>
     </main>
