--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        <h2>Projects</h2>
+        <h2>CIS-130</h2>
         <section class="projects-grid">
             <a href="webprojects/about">About Me Intro</a>
             <a href="webprojects/howto/">Sudoku How To</a>
